# NEXO

./: .gitignore  ACTIELIJST.md  Apple_Sillicon_rust_candle_performance.md  Cargo.toml  INITIAL-NEXO-AI-PROMPT.md  KV_CACHE_MANAGEMENT.md  LLM_explanation.md  LORA TODO.md  LoRA.md  RANDOM_IDEA.md  README.md  SESSION_WITH_ANI_TO_LEARN_INFERENCE.md  SomeNicePrompts.md  TMP_PROMPT_TO_FIX_NEXO_TOMLSTUFF.md  TODO.md  TODOdezeweek.md  TurboQuant.md  better chat templates.md  brainstorming on nexo agent.md  coverage.sh  deploy.sh  errors_in_rust.md  fixtheshit.md  gguf for gemma 4.md  hf_downloader.py  message_definition.md  need_to_rethink_and_clean_up_abstractions.md  new_refactor_plan.md  nexo_schema.json  prompt_nexo.md  promptforinferenceclients.md  refactorplan.md  refine-nexa-ai.md  swift websocket client.md  swift_fix.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: gateway_node.rs
nexo-ai/: Cargo.toml
nexo-ai/src/: _catalog.rs  catalog.rs  config.rs  error.rs  lib.rs  main.rs
nexo-ai/src/api/: kv_cache.rs  mod.rs  types.rs
nexo-ai/src/audio/: decode.rs  mel.rs  mod.rs
nexo-ai/src/catalog/: download.rs  mod.rs  model_catalog.rs  model_file.rs  model_manifest.rs  paths.rs  progress.rs
nexo-ai/src/catalog/definitions/: mod.rs
nexo-ai/src/cli/: base.rs  mod.rs  repl.rs  tui.rs
nexo-ai/src/config/: ai.rs  coordinator.rs  mod.rs
nexo-ai/src/coordinator/: core.rs  factory.rs  load.rs  mod.rs  registry.rs  unload.rs
nexo-ai/src/device/: mod.rs
nexo-ai/src/download/: manifest.rs  mod.rs  paths.rs  pull.rs
nexo-ai/src/engine/: _config.rs  config.rs  inference_engine.rs  mod.rs  runtime_manager.rs
nexo-ai/src/mapping/: mod.rs  request.rs  response.rs
nexo-ai/src/models/: mod.rs  stub.rs
nexo-ai/src/openai/: model.rs  protocol.rs
nexo-ai/src/registry/: catalog.rs  manifest.rs  mod.rs  models.rs
nexo-ai/src/remote_models/: mlx_model.rs  mlx_server.rs  mod.rs  openai_client.rs
nexo-ai/src/round/: mod.rs
nexo-ai/src/run/: mod.rs
nexo-ai/src/runtime/: builder.rs  controller.rs  engine.rs  mod.rs  service.rs
nexo-ai/src/servers/: mod.rs
nexo-ai/src/shared/: mod.rs  model_traits.rs  types.rs
nexo-ai/src/statistics/: aggregates.rs  backend.rs  collector.rs  metrics.rs  mod.rs
nexo-ai/tests/: mlx_server.rs  model_inference.rs  openai_tool_followup.rs
nexo-ai/tests/common/: mod.rs
nexo-client/: Cargo.toml
nexo-client/src/: chat.rs  cli.rs  config.rs  connect.rs  lib.rs  main.rs
nexo-client/src/audio/: decode.rs  encode.rs  mod.rs  playback.rs  resample.rs
nexo-client/src/cli/: base.rs
nexo-client/src/tui/: command.rs  completion.rs  mod.rs  model.rs  network.rs  terminal.rs  update.rs  view.rs
nexo-client/src/vision/: decode.rs  display.rs
nexo-gateway/: Cargo.toml  Next prompt.md
nexo-gateway/db_schema/: schema.sql
nexo-gateway/migrations/: 001_initial.sql  002_agent_sessions.sql  002_remove_prefill_tables.sql  _old_001_initial.sql
nexo-gateway/src/: _testing.rs  agent.rs  cli.rs  config.rs  engine.rs  error.rs  init.rs  lib.rs  main.rs  runtime.rs  schema_cmd.rs  testing.rs
nexo-gateway/src/_agent/: locks.rs  mod.rs  queue.rs
nexo-gateway/src/_server/: mod.rs  state.rs
nexo-gateway/src/_tools/: mod.rs
nexo-gateway/src/agent/: context.rs  cron.rs  gateway_tools.rs  inference_run_state.rs  job.rs  locks.rs  loop_runner.rs  messages.rs  mod.rs  prefill.rs  queue.rs  runtime.rs  session.rs
nexo-gateway/src/cli/: base.rs  mod.rs
nexo-gateway/src/memory/: git.rs  mod.rs  notes.rs  persistent.rs
nexo-gateway/src/server/: auth.rs  handler.rs  mod.rs  state.rs  ticker.rs
nexo-gateway/src/tools/: executor.rs  mod.rs  registry.rs
nexo-node/: Cargo.toml
nexo-node/src/: cli.rs  config.rs  connect.rs  engine.rs  error.rs  lib.rs  main.rs  registry.rs
nexo-node/src/cli/: base.rs  mod.rs
nexo-node/src/download/: manifest.rs  mod.rs  paths.rs  pull.rs  registry.rs
nexo-node/src/inference/: cache.rs  dispatch.rs  mod.rs  model_lifecycle.rs
nexo-node/src/inference_clients/: base.rs  mod.rs  openai.rs  qwen_cli.rs  whisper.rs
nexo-node/src/kv_cache/: disk.rs  manager.rs  mod.rs  types.rs
nexo-node/src/services/: llama_server.rs  mod.rs
nexo-node/src/tools/: builtins.rs  gateway.rs  mod.rs  registry.rs
nexo-node/src/transport/: inference.rs  mod.rs  protocol.rs  runtime.rs
nexo-tools/ai/multimodal/: Cargo.toml
nexo-tools/core/nexo-notes/: Cargo.toml
nexo-tools/nexo-io/: Cargo.toml
nexo-tools/nexo-io/src/: lib.rs  tools.rs
nexo-tools/nexo-notes/: Cargo.toml
nexo-tools/nexo-notes/src/: frontmatter.rs  lib.rs  storage.rs  tools.rs
nexo-tools/plugins/epub-extractor/: Cargo.toml
nexo-tools/plugins/game-extractor/: Cargo.toml  HOW_IT_WAS_BUILT.md  README.md
shared/local-inference-helpers/: Cargo.toml
shared/local-inference-helpers/src/: device.rs  download.rs  dtype.rs  lib.rs  manifest.rs  noise.rs  paths.rs  progress.rs
shared/nexo-core/: Cargo.toml
shared/nexo-core/src/: error.rs  lib.rs
shared/nexo-model-mgmt/: Cargo.toml  README.md
shared/nexo-model-mgmt/src/: command.rs  error.rs  lib.rs  manifest.rs  paths.rs  pull.rs  registry.rs
shared/nexo-spec/: Cargo.toml
shared/nexo-spec/src/: lib.rs  model.rs  tool.rs  transcript.rs
shared/nexo-ws-client/: Cargo.toml
shared/nexo-ws-client/src/: _handshake.rs  connection.rs  error.rs  handshake.rs  lib.rs
shared/nexo-ws-schema/: Cargo.toml
shared/nexo-ws-schema/src/: _connect.rs  _events.rs  _methods.rs  _types.rs  connect.rs  error.rs  events.rs  frame.rs  lib.rs  methods.rs  schema.rs  types.rs
shared/utl-helpers/: Cargo.toml
shared/utl-helpers/src/: config.rs  error.rs  interactive.rs  lib.rs  output.rs  paths.rs  progress.rs  tracing.rs
tools/multimodal/: Cargo.toml
tools/multimodal/src/: describer.rs  image_preprocess.rs  lib.rs  main.rs
tools/speech_to_text/: Cargo.toml
tools/speech_to_text/src/: config.rs  main.rs  manifest.rs
tools/text_to_img/: Cargo.toml  README.md
tools/text_to_img/src/: config.rs  generator.rs  manifest.rs  models.rs  prompt.rs
(+824 files in other folders)
