[workspace]
members = [
    "nexo-tools/plugins/epub-extractor",
    "nexo-tools/plugins/game-extractor",
    "shared/nexo-ws-schema",
    "shared/nexo-ws-client",
    "shared/nexo-core",
    "nexo-gateway",
    "nexo-node",
    "nexo-client",
    "nexo-tools/nexo-notes",
    "nexo-tools/nexo-io",
    "nexo-ai",
    "nexo-tools/nexo-echo",
]

resolver = "3"

[workspace.dependencies]
cli-helpers = { git = "https://github.com/thiezn/my-crates" }
nexo-core = { path = "shared/nexo-core" }
nexo-ws-client = { path = "shared/nexo-ws-client" }
nexo-ws-schema = { path = "shared/nexo-ws-schema" }

anyhow = "1"
async-trait = "0"
base64 = "0.22"
# Keep this pinned to the same Candle Git revision that `mistralrs-core` master
# uses. Otherwise Cargo resolves two different `candle_core` crates (registry and
# git), and `nexo-ai` hits `Device`/`Tensor` type mismatches at the mistralrs API boundary.
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "a9667ca", version = "0.10.2" }
chrono = "0"
clap = "4"
console = "0"
dirs = "6"
futures-util = "0"
http = "1"
image = "0"
indicatif = "0"
rayon = "1"
schemars = "0"
serde = "1"
serde_json = "1"
sha2 = "0"
thiserror = "2"
tokio = "1"
tokio-tungstenite = "0"
tracing = "0"
uuid = "1"
yaml_serde = "0"
strum = "0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Optimise candle even in dev/test builds — unoptimised tensor ops are ~10-50x slower.
[profile.dev.package.candle-core]
opt-level = 3
[profile.dev.package.candle-nn]
opt-level = 3
[profile.dev.package.candle-metal-kernels]
opt-level = 3
[profile.dev.package.metal]
opt-level = 3
[profile.dev.package.half]
opt-level = 3
[profile.dev.package.gemm]
opt-level = 3
[profile.dev.package.gemm-common]
opt-level = 3
[profile.dev.package.gemm-f16]
opt-level = 3

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "fat"

# This will enable debug symbols in the release build making it increase in size.
# It will not slow down the actual release. Still for running in containers, it
# would be good if we can disable this when pushing to Container registry.
debug = true
