[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

# This crate has no library or binary — only integration tests.

[dev-dependencies]
nexo-gateway = { path = "../nexo-gateway" }
nexo-ws-client = { workspace = true }
nexo-ws-schema = { workspace = true }
nexo-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[lints]
workspace = true
