[package]
name = "nexo-ai"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "src/lib.rs"

[features]
default = []
candle = []
cli = []
download = []
metal = [
    "candle-core/metal",
    "mistralrs-core/metal",
    "mold-ai-inference/metal",
    "any-tts/metal",
]

[dependencies]
any-tts = { version = "0.1", default-features = false, features = ["kokoro"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
candle-core = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cli-helpers = { workspace = true, features = ["clap", "config"] }
dirs = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
nexo-core = { path = "../shared/nexo-core" }
nexo-model-mgmt = { path = "../shared/nexo-model-mgmt" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }

[dependencies.either]
version = "1"

[dependencies.indexmap]
version = "2"

[dependencies.mold-ai-core]
package = "mold-ai-core"
git = "https://github.com/utensils/mold"
branch = "main"

[dependencies.mold-ai-inference]
package = "mold-ai-inference"
git = "https://github.com/utensils/mold"
branch = "main"
default-features = false

[dependencies.mistralrs-core]
git = "https://github.com/EricLBuehler/mistral.rs"
branch = "master"
default-features = false

[lints]
workspace = true
