[package]
name = "nexo-ai"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "src/lib.rs"

[features]
default = []
candle = []
cli = []
download = []
metal = [
    "candle-core/metal",
    "mistralrs-core/metal",
    "mold-ai-inference/metal",
    "any-tts/metal",
]

[dependencies]

any-tts = { version = "0.1", default-features = false, features = ["kokoro"] }
async-trait = { workspace = true }
base64 = { workspace = true }
candle-core = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cli-helpers = { workspace = true, features = ["clap", "config"] }
dirs = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
nexo-core = { path = "../shared/nexo-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
hf-hub = { version = "0", default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
# NOTE: we need to ensure this is aligned with the version of reqwest used by hf-hub,
# as we need to enable socks feature. run cargo tree --package nexo-ai and see what
# version it uses. Note that ureq also seems to support socks5h from version 3.2
# or so, but at the moment they are still on older version v2.12.1
reqwest = { version = "0.12.28", features = ["socks"] }


# We only bring anyhow in here as MistralRs requires it when initializing
# its MistralTokenizationRequest and MistralDetokenizationRequest structs.
# Do NOT use this anywhere else, since nexo-ai is a library crate we
# only want to leverage thiserror.
anyhow = { workspace = true }

[dependencies.either]
version = "1"

[dependencies.indexmap]
version = "2"

[dependencies.mold-ai-core]
package = "mold-ai-core"
git = "https://github.com/utensils/mold"
branch = "main"

[dependencies.mold-ai-inference]
package = "mold-ai-inference"
git = "https://github.com/utensils/mold"
branch = "main"
default-features = false

[dependencies.mistralrs-core]
git = "https://github.com/EricLBuehler/mistral.rs"
branch = "master"
default-features = false

[lints]
workspace = true
