[package]
name = "nexo-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo-client"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { path = "../shared/nexo-ws-schema" }
nexo-ws-client = { path = "../shared/nexo-ws-client" }
utl-helpers = { path = "../shared/utl-helpers", features = ["config"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[lints]
workspace = true
