[package]
name = "nexo-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo-client"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { workspace = true, features = ["clap"] }
nexo-ws-client = { workspace = true }
cli-helpers = { workspace = true, features = [
    "clap",
    "config",
    "markdown",
    "tracing",
] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
base64 = { workspace = true }
ratatui = { version = "0", features = ["crossterm"] }
crossterm = "0"

# Audio
symphonia = { version = "0", features = [
    "wav",
    "mp3",
    "ogg",
    "flac",
    "pcm",
    "aac",
    "isomp4",
] }
hound = "3"
rubato = "0"
cpal = "0"
rodio = "0"
rustfft = "6"

# Vision
image = { workspace = true }
viuer = "0"


[lints]
workspace = true
