[package]
name = "nexo-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { path = "../shared/nexo-ws-schema" }
nexo-tool-spec = { path = "../shared/nexo-tool-spec" }
utl-helpers = { path = "../shared/utl-helpers", features = ["config", "interactive"] }
sqlx = { version = "0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
clap = { version = "4", features = ["derive"] }
futures-util = "0"
uuid = { version = "1", features = ["v7"] }
chrono = "0"
dirs = "6"
http = "1"

[lints]
workspace = true
