[package]
name = "nexo-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { workspace = true, features = ["clap"] }
nexo-spec = { workspace = true, features = ["tool", "schema"] }
cli-helpers = { workspace = true, features = [
    "config",
    "interactive",
    "paths",
    "tracing",
] }
sqlx = { version = "0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
sha2 = { workspace = true }
git2 = { version = "0", features = ["https", "ssh"] }
anyhow = { workspace = true }
nexo-notes = { path = "../nexo-tools/core/nexo-notes" }
nexo-io = { path = "../nexo-tools/nexo-io" }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }

[lints]
workspace = true
