[package]
name = "nexo-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo-node"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { path = "../shared/nexo-ws-schema" }
nexo-ws-client = { path = "../shared/nexo-ws-client" }
nexo-spec = { path = "../shared/nexo-spec", features = ["tool"] }
nexo-ai = { path = "../nexo-ai", default-features = false, features = ["metal", "download"] }
utl-helpers = { path = "../shared/utl-helpers", features = ["config"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
async-trait = "0"
base64 = "0.22"
indicatif = "0"
console = "0"
sha2 = "0"
candle-core = "0"
thiserror = "2"
futures-util = "0"

[lints]
workspace = true
