[package]
name = "nexo-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo-node"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { workspace = true }
nexo-ws-client = { workspace = true }
nexo-spec = { workspace = true, features = ["tool"] }
nexo-ai = { path = "../nexo-ai", default-features = false, features = [
    "mlx",
    "metal",
    "download",
] }
cli-helpers = { workspace = true, features = ["config", "tracing"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
sha2 = { workspace = true }
candle-core = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
