[package]
name = "nexo-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo-node"
path = "src/main.rs"

[dependencies]
nexo-ws-schema = { workspace = true }
nexo-ws-client = { workspace = true }
nexo-core = { workspace = true }
nexo-echo = { path = "../nexo-tools/nexo-echo" }
nexo-ai = { path = "../nexo-ai", default-features = false, features = [
    "metal",
    "download",
] }
comfy-table = "7"
cli-helpers = { workspace = true, features = ["clap", "config", "tracing"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }

[lints]
workspace = true
