[package]
name = "nexo-io"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-tool-spec = { path = "../../shared/nexo-tool-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0"
anyhow = "1"
tokio = { version = "1", features = ["rt", "process", "time"] }
reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
regex = "1"
fast_html2md = "0"

[lints]
workspace = true
