[package]
name = "nexo-io"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "time"] }
reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
regex = "1"
fast_html2md = "0"

[lints]
workspace = true
