[package]
name = "nexo-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
yaml_serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["rt", "macros"] }
schemars = { workspace = true }

[lints]
workspace = true
