[package]
name = "local-inference-helpers"
version = "0.1.0"
edition = "2024"

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
download = ["dep:hf-hub", "dep:indicatif", "dep:console", "dep:sha2", "dep:tokio"]

[dependencies]
candle-core = "0"
candle-nn = "0"
# Pinned to 0.9/0.5 to match candle's rand dependency (0.x = semver-breaking per minor)
rand = "0.9"
rand_distr = "0.5"
anyhow = "1"
thiserror = "2"
tracing = "0"
serde = { version = "1", features = ["derive"] }
dirs = "6"

# Download system (feature-gated)
hf-hub = { version = "0", default-features = false, features = ["tokio", "ureq", "rustls-tls"], optional = true }
indicatif = { version = "0", optional = true }
console = { version = "0", optional = true }
sha2 = { version = "0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[lints]
workspace = true
