[package]
name = "nexo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
schemars = { workspace = true, features = ["chrono04", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
