[package]
name = "nexo-core"
version = "0.1.0"
edition = "2024"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
schemars = { workspace = true, features = ["chrono04", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true, optional = true, features = [
    "sqlite",
    "chrono",
    "uuid",
] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }
strum = { workspace = true, features = ["derive"] }

[lints]
workspace = true
