[package]
name = "nexo-model-mgmt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
cli-helpers = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
hf-hub = { version = "0.4", default-features = false, features = [
    "tokio",
    "ureq",
    "rustls-tls",
] }
indicatif = { workspace = true }
nexo-core = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[lints]
workspace = true
