[package]
name = "nexo-spec"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = { version = "0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
anyhow = { version = "1", optional = true }
schemars = { version = "0", optional = true }

[features]
default = []
tool = ["dep:async-trait", "dep:tokio", "dep:anyhow"]
schema = ["dep:schemars"]

[lints]
workspace = true
