[package]
name = "nexo-spec"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
], optional = true }
anyhow = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = []
tool = ["dep:async-trait", "dep:tokio", "dep:anyhow"]
schema = ["dep:schemars"]

[lints]
workspace = true
