[package]
name = "nexo-ws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-ws-schema = { path = "../nexo-ws-schema" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
tracing = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0"
http = "1"
thiserror = "2"

[lints]
workspace = true
