[package]
name = "nexo-ws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-ws-schema = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
nexo-core = { workspace = true }

[lints]
workspace = true
