[package]
name = "nexo-ws-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0", features = ["serde"] }

[lints]
workspace = true
