[package]
name = "nexo-ws-schema"
version = "0.1.0"
edition = "2024"

[features]
clap = ["dep:clap"]

[dependencies]
nexo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7", "serde"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["log"] }

[lints]
workspace = true
