[package]
name = "multimodal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multimodal"
path = "src/main.rs"

[features]
default = ["metal"]
cuda = ["local-inference-helpers/cuda", "candle-transformers/cuda"]
metal = ["local-inference-helpers/metal", "candle-transformers/metal"]

[dependencies]
local-inference-helpers = { path = "../../shared/local-inference-helpers", features = ["download"] }
utl-helpers = { path = "../../shared/utl-helpers", features = ["config"] }
candle-transformers = "0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
anyhow = "1"
image = "0"
tokenizers = "0"
safetensors = "0"
rand = "0.9"
dirs = "6"

[lints]
workspace = true
