[package]
name = "speech_to_text"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "speech_to_text"
path = "src/main.rs"

[features]
default = ["metal"]
cuda = ["local-inference-helpers/cuda", "candle-transformers/cuda"]
metal = ["local-inference-helpers/metal", "candle-transformers/metal"]

[dependencies]
local-inference-helpers = { path = "../../shared/local-inference-helpers", features = ["download"] }
utl-helpers = { path = "../../shared/utl-helpers", features = ["config"] }
candle-transformers = "0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
anyhow = "1"
dirs = "6"
tokenizers = "0"
safetensors = "0"
symphonia = { version = "0", features = ["isomp4", "mp3", "ogg", "flac", "wav", "pcm", "aac"] }
rubato = "0"
rand = "0.9"

[lints]
workspace = true
