[package]
name = "text_to_img"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "text_to_img"
path = "src/main.rs"

[features]
default = ["metal"]
cuda = ["local-inference-helpers/cuda", "candle-transformers/cuda"]
metal = ["local-inference-helpers/metal", "candle-transformers/metal"]

[dependencies]
local-inference-helpers = { path = "../../shared/local-inference-helpers", features = ["download"] }
utl-helpers = { path = "../../shared/utl-helpers", features = ["config"] }
# candle-core and candle-nn come via local-inference-helpers re-exports
candle-transformers = { version = "0", package = "candle-transformers-mold" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
image = "0"
# Pinned to match candle's rand dependency
rand = "0.9"
safetensors = "0"
tokenizers = "0"
anyhow = "1"
base64 = "0"
dirs = "6"

[lints]
workspace = true
