[package]
name = "multimodal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multimodal"
path = "src/main.rs"

[features]
default = []
video = ["dep:video-rs"]

[dependencies]
local-inference-helpers = { path = "../../../shared/local-inference-helpers", features = [
    "download",
] }
utl-helpers = { path = "../../../shared/utl-helpers", features = ["config"] }
mlx-rs = { version = "0", features = ["safetensors"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
anyhow = "1"
image = "0"
tokenizers = "0"
rand = "0.9"
dirs = "6"
video-rs = { version = "0", optional = true }

[lints]
workspace = true
