[package]
name = "nexo-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
nexo-tool-spec = { path = "../../../shared/nexo-tool-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0"
anyhow = "1"
chrono = "0"
tokio = { version = "1", features = ["rt"] }

[lints]
workspace = true
