[package]
name = "epub-extractor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "epub-extractor"
path = "src/main.rs"

[dependencies]
zip = "2"
roxmltree = "0"
base64 = "0.22"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utl-helpers = { path = "../../../shared/utl-helpers" }
clap = { version = "4", features = ["derive"] }
tracing = "0"

[lints]
workspace = true
