[package]
name = "epub-extractor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "epub-extractor"
path = "src/main.rs"

[dependencies]
zip = "2"
roxmltree = "0"
base64 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
cli-helpers = { workspace = true, features = ["paths", "tracing"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[lints]
workspace = true
