[package]
name = "game-extractor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game-extractor"
path = "src/main.rs"

[dependencies]
utl-helpers = { path = "../../../shared/utl-helpers", features = ["progress"] }
image = "0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json"] }
base64 = "0.22"
tracing = "0"

[lints]
workspace = true
