[package]
name = "game-extractor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game-extractor"
path = "src/main.rs"

[dependencies]
cli-helpers = { workspace = true, features = ["clap", "progress", "tracing"] }
image = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0", features = ["json"] }
base64 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
